--- a/YENTEN/YENTEN.csproj
+++ b/YENTEN/YENTEN.csproj
@@ -16,7 +16,7 @@
       <CopyToOutputDirectory>Always</CopyToOutputDirectory>
     </EmbeddedResource>
     <EmbeddedResource Include="MainDB1.db">
-      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
     </EmbeddedResource>
     <EmbeddedResource Include="newWallets.txt">
       <CopyToOutputDirectory>Always</CopyToOutputDirectory>
