--- a/YENTEN/YENTEN.csproj
+++ b/YENTEN/YENTEN.csproj
@@ -23,6 +23,7 @@
     </EmbeddedResource>
   </ItemGroup>
   <ItemGroup>
+    <PackageReference Include="BitcoinLib" Version="1.15.0" />
     <PackageReference Include="EntityFramework" Version="6.4.4" />
     <PackageReference Include="System.Data.SQLite" Version="1.0.113.7" />
     <PackageReference Include="Telegram.Bot" Version="15.7.1" />
